# MU-Big-Data-and-Data-Science-Image-Pathology-Pipeline

./: .gitignore  1-download-sample-images.sh  AUTHORS.md  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: tests.yml
digital_pathology/: TissueTileExtract.py  __init__.py  helper_functions.py  spark.py  unet.py  utils.py
digital_pathology/download/: files.py  udf.py
digital_pathology/ingest/: __init__.py  aws.py
digital_pathology/process/: model_selection.py  stardist.py  tiatoolbox.py
jobs/: download.py  ingest.py  process_htk.py  process_stardist.py  process_tiatoolbox.py  process_tiatoolbox_model_sel.py
lib/: libopenslide.dylib  libvips.42.dylib
notebooks/: .gitignore  0-extract-directory-source.ipynb  0.0-extract-directory-source.ipynb  0.1-Test-openslide.ipynb  1.0-download.ipynb  3.0-extract-features.ipynb  3.1-unet-comparison.ipynb  4.0-gold-data.ipynb  init.py  libdmtx.dylib  testing.ipynb
scripts/: 0-ingest.bat  0-ingest.sh  1-download-sample-images.bat  1-download-sample-images.sh  build.sh  clear-env.bat  clear-env.sh  environment.sh  install.sh
tests/: init.py  test_init.py
