[tool.poetry]
name = "digital_pathology"
version = "1.0.0"
description = "Digital Pathology"
authors = ["Israel Llorens <sanchezis@hotmail.com>"]
license = "(EUPL) v1.2"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.20.2"
pandas = "^2.0.0"
pyspark = "3.4.4"
pyarrow = "14.0.2"  # Use a newer version with pre-built wheels
torch = "^2.6.0"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"
tensorflow-macos = {version = "^2.16.2", platform = "darwin"}
tensorflow-metal = {version = "^1.2.0", platform = "darwin"}
boto3 = "^1.37.18"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
black = "^23.10.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"



[tool.poetry.group.doc.dependencies]
black = "^23.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
