[tool.poetry]
name = "digital_pathology"
version = "1.0.0"
description = "Digital Pathology"
authors = ["Israel Llorens <sanchezis@hotmail.com>"]
license = "EUPL-1.2"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24"  # scikit-image 0.19.3 breaks with numpy>=1.24
pandas = "^2.0.0"
pyspark = "3.4.4"
pyarrow = "14.0.2"  # Use a newer version with pre-built wheels
torch = "^2.6.0"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"
boto3 = "^1.37.18"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
tifffile = "^2025.3.13"
tiffslide = "^2.5.0"
slideio = "^2.7.0"
plotly = "^6.0.1"
openslide-python = "1.3.1"
openslide-bin = "^4.0.0.6"
scipy = "^1.8.0"
scikit-image = "0.25.2"
scikit-learn = "^1.6.1"
shapely = "^2.0.7"
tensorflow = {version = "^2.16.1", extras = ["cuda"], markers = "sys_platform != 'darwin'"}
tensorflow-macos = {version = "^2.16.2", markers = "sys_platform == 'darwin'"}
tensorflow-metal = {version = "^1.2.0", markers = "sys_platform == 'darwin'"}
stardist = "^0.9.1"
histomicstk = "^1.4.0"
ipykernel = "^6.29.5"
pillow = "^11.1.0"
statsmodels = "^0.14.4"
opencv-python = "^4.11.0.86"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
black = "^23.10.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"